# overseer

./: .dockerignore  .gitignore  CMakeLists.txt  Doxyfile  docker-compose.yml
internals/Client/: Dockerfile
internals/Server/: Dockerfile
src/Client/: Application.cpp  Application.h  Client.h  ProcessList.cpp  ProcessList.h  WatcherConnection.cpp  WatcherConnection.h  main.cpp
src/Common/: Common.h  Communication.h  ErrorHandling.cpp  ErrorHandling.h  Hasher.cpp  Hasher.h  Logger.cpp  Logger.h  NetUtils.cpp  NetUtils.h
src/Server/: Application.cpp  Application.h  Checker.cpp  Checker.h  Overseer.cpp  Overseer.h  Server.cpp  Server.h  main.cpp
